index.css
body {
    margin: 0px;
}
#content {
    display: inline-block;
    /* scale is set by RenderedLevel */
    transform: scale(1);
    transform-origin: top left;
}
.map {
    position: relative;
}
.tile {
    display: inline-block;
}
.row {
    line-height: 0;
}
.stacked {
    position: absolute;
}

.openable:not(.is-open) .open {
    display: none;
}
.openable.is-open .closed {
    display: none;
}

.animation-frame {
    position: absolute;
    /* opacity is set by animation */
    opacity: 0;
}

@keyframes change-2 {
    0%, 50% {
        opacity: 1;
    }
    50.0001%,  100% {
        opacity: 0;
    }
}
@keyframes change-3 {
    0%, 33.3333% {
        opacity: 1;
    }
    33.3334%,  100% {
        opacity: 0;
    }
}
@keyframes change-4 {
    0%, 25% {
        opacity: 1;
    }
    25.0001%,  100% {
        opacity: 0;
    }
}
@keyframes change-5 {
    0%, 20% {
        opacity: 1;
    }
    20.0001%,  100% {
        opacity: 0;
    }
}
@keyframes change-6 {
    0%, 16.6666% {
        opacity: 1;
    }
    16.6667%,  100% {
        opacity: 0;
    }
}
@keyframes change-7 {
    0%, 14.2857% {
        opacity: 1;
    }
    14.2858%,  100% {
        opacity: 0;
    }
}
@keyframes change-8 {
    0%, 12.5000% {
        opacity: 1;
    }
    12.5001%,  100% {
        opacity: 0;
    }
}
@keyframes change-9 {
    0%, 11.1111% {
        opacity: 1;
    }
    11.1112%,  100% {
        opacity: 0;
    }
}
@keyframes change-10 {
    0%, 10.0000% {
        opacity: 1;
    }
    10.0001%,  100% {
        opacity: 0;
    }
}
:root {
    --standard-tile-size: 512px;
}

.worm-segment {
    width: var(--worm-segment-size);
    height: var(--worm-segment-size);
    border-radius: 50%;
    position: absolute;
    top:calc(var(--worm-segment-size) / -2);
    left:calc(var(--worm-segment-size) / -2);
    background: rgb(214,11,11);
    background: linear-gradient(135deg, rgba(214,11,11,1) 50%, rgba(0,0,0,1) 100%); 
}

.worm-segment.worm-head::after {
    width: 1px;
    height: calc(var(--worm-segment-size)/4);
    position: absolute;
    top: calc(var(--worm-segment-size)/4);
    left: calc(var(--worm-segment-size)/4);
    border-top: 1px solid white;
    border-bottom: 1px solid white;
    content: "";
    transform-origin: calc(var(--worm-segment-size)/4);
}
.worm-segment.worm-head.dir-W::after {
    transform: rotate(0deg);
}
.worm-segment.worm-head.dir-N::after {
    transform: rotate(90deg);
}
.worm-segment.worm-head.dir-E::after {
    transform: rotate(180deg);
}
.worm-segment.worm-head.dir-S::after {
    transform: rotate(270deg);
}

.worm-segment:nth-last-child(3) {
    top: calc((var(--worm-segment-size) / 6) * -2);
    left: calc((var(--worm-segment-size) / 6) * -2);
    width: calc((var(--worm-segment-size) / 3) * 2);
    height: calc((var(--worm-segment-size) / 3) * 2);
}
.worm-segment:nth-last-child(2) {
    top: calc((var(--worm-segment-size) / 4) * -1);
    left: calc((var(--worm-segment-size) / 4) * -1);
    width: calc(var(--worm-segment-size) / 2);
    height: calc(var(--worm-segment-size) / 2);
}
.worm-segment:nth-last-child(1) {
    top: calc((var(--worm-segment-size) / 6) * -1);
    left: calc((var(--worm-segment-size) / 6) * -1);
    width: calc(var(--worm-segment-size) / 3);
    height: calc(var(--worm-segment-size) / 3);
}

.target {
    /* width: 8px;
    height: 8px; */
    border: 1px solid gold;
    position: absolute;
    top:0;
    left:0;
    z-index: 1;
}

.dbg {
    background-color: rgba(0,0,0,.3);
    z-index: 1;
    position: absolute;
}

